--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!doctype html>
-<html lang="tr">
+<html lang="fr">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Fransızca Dersleri</title>
+    <link rel="icon" type="image/png" href="/mdl_fav.png">
+    <title>Maison de l'Anglais</title>
   </head>
   <body>
     <div id="app"></div>
